# Quests

./: .gitignore  CLAUDE.md  docker-compose.yml
.claude/: settings.local.json
.claude/commands/: commit-and-push.md
.github/workflows/: claude-code-review.yml  lint.yml
.husky/: pre-commit
backend/: .env  .env.docker  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/alembic/: README  env.py
backend/alembic/versions/: 3541f17975db_initial.py  675a6f5cea0f_remove_description_from_arcs.py  b903a85907a3_initial.py  ddc1f4797951_add_saga_quest_relation.py
backend/app/: main.py
backend/src/: database.py  main.py  models.py  schemas.py  settings.py
frontend/: Dockerfile  eslint.config.js  package-lock.json  package.json  tsconfig.json
frontend/src/: App.module.css  App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/components/: ArcCard.module.css  ArcCard.tsx  ArcList.module.css  ArcList.tsx  QuestDetail.module.css  QuestDetail.tsx  QuestRow.module.css  QuestRow.tsx  icons.tsx
frontend/src/hooks/: useArcs.ts
