[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "quests-backend"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.111.0",
    "pydantic>=2.0"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
lint.select = ["E", "W", "F", "I", "UP"]
preview = true
line-length = 100
target-version = "py312"

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
